--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-:root {
+*:root {
     --primary-subtitle-color: #757575;
     --accent-color: #2196f3;
     --button-hover-color: #188ce8;
@@ -14,9 +14,9 @@
 --portfolio-main-color: #e5e5e5;
 --main-project-iteam:#eeeeee;
 --passive-icon-color: #afb1b8;
-}
+}*
 
-html {
+*html {
     box-sizing: border-box;
 }
 
@@ -25,8 +25,9 @@ html {
 *::after {
     box-sizing: inherit;
 }
+*
 
-body {
+*body {
     background-color: var(--white-color);
     font-family: Roboto,
     sans-serif;
@@ -34,8 +35,8 @@ body {
     letter-spacing: 0.03em;
     font-size: 14px;
 }
-
-a {
+*
+*a {
     text-decoration: none;
 }
 
@@ -62,28 +63,18 @@ p {
     margin: 0 auto;
     padding: 0;
 }
+*
 
-/*button {
-    padding: 0;
-    border: none;
-    font: inherit;
-    color: inherit;
-    background-color: transparent;
-
-    cursor: pointer;
-    font-family: Roboto, sans-serif;
-    border-radius: 4px;
-}*/
 
 /* Секції */
-.section {
+*.section {
     padding-top: 94px;
     padding-bottom: 94px;
-}
+}*
 
 /* Контейнер */
 
-.container {
+*.container {
     width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
@@ -91,7 +82,7 @@ p {
     margin-right: auto;
 
      /*outline: 2px solid tomato; */
-}
+}*
 /* Шапка */
 .header {
     
@@ -99,7 +90,7 @@ p {
 }
 
 /* <!--логотип-->*/
-.logo {
+*.logo {
     /*margin-right: 93px;*/
     font-family: Raleway,
     sans-serif;
@@ -120,10 +111,10 @@ p {
 
 .footer .logo {
     color: var(--white-color);
-}
+}*
 
 
-/* <!--hidden--> */
+*/* <!--hidden--> */
 .visually-hidden {
     position: absolute;
     width: 1px;
@@ -136,7 +127,7 @@ p {
     clip-path: inset(100%);
     clip: rect(0 0 0 0);
     overflow: hidden;
-}
+}*
 
 /* <!--Навігація -->*/
 
@@ -203,13 +194,6 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
-/*.navigation .link:hover,
-.navigation .link:focus {
-    color: var(--accent-color);
-}*/
-
-
-
 
 
 .header-item {
@@ -251,7 +235,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 
 /* <!--Заголовок-->*/
-.hero {
+*.hero {
     max-width: 1600px;
     max-height: 600px;
         margin-left: auto;
@@ -267,12 +251,12 @@ background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 
     background-repeat: no-repeat;
     background-size: cover;
 }
-
+*
 .footer {
     background-color: var(--primary-hero-footer-color);
 }
 
-.hero-title {
+*.hero-title {
    
         margin-bottom: 30px;
         max-width: 696px;
@@ -311,7 +295,7 @@ font-weight: 700;
 .button.primary:focus,
 .button.primary:hover {
     background-color: var(--button-hover-color);
-}
+}*
 /* <!--секція особливості-->*/
 .specifics {
   padding-top: 94px;  
@@ -658,7 +642,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 /* Підписка */
 
-.footer-form-title {
+*.footer-form-title {
     display: block;
     margin-bottom: 20px;
 
@@ -733,7 +717,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .footer-form-icon {
     fill: var(--white-color);
 }
-
+*
 /* <!--Портфоліо--> */
 .filters {
     display: flex;
@@ -872,7 +856,7 @@ display: block;
 
 /*modal*/
 
-.backdrop {
+*.backdrop {
     position: fixed;
     top: 0;
     left: 0;
@@ -1127,4 +1111,4 @@ right: 8px;
 .submit-btn:hover,
 .submit-btn:focus {
     background-color: var(--button-hover-color);
-}
+}*
