--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -3,36 +3,59 @@
 
 }
 
-header::after {
-    content: '';
-    width: 100%;
-    position: absolute;
-    top: 0;
-    height: 1px;
-    background-color: #ececec;
+.header-container {
+    display: flex;
 }
 
-.site-link,
-.header-item {
+.navigation {
     display: flex;
     align-items: center;
-    font-weight: 500;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    padding: 32px 0;
-    text-decoration: none;
-    list-style: none;
+
 }
 
-.site-link {
+.link {
+    position: relative;
+    display: block;
+    align-items: center;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+color: var(--primary-subtitle-color);
+    
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+&:hover,
+    &:focus { color: var(--accent-color);}
+    
+    }
+
+.header-list {
+    display: flex;
+}
+
+.header-list__link {
     position: relative;
 }
 
-.current::after {
+.header-list__item:not(:last-child) {
+    margin-right: 50px;
+}
+
+.header-list__link {
+    position: relative;
+    display: block;
+        padding: 32px 0;
+            }
+
+
+.header-list__link.header-list__link--current::after {
     content: '';
+    position: absolute;
     width: 100%;
     height: 4px;
-    position: absolute;
+    
+    display: block;
     bottom: 0;
     left: 0;
 
@@ -40,58 +63,39 @@ header::after {
     border-radius: 2px;
 }
 
-.site-link {
-    color: var(--primary-text-color);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.site-link:hover,
-.site-link:focus,
-.current,
-.current-btn {
-    color: var(--accent-color);
-
-}
-
-.current,
-.current-btn {
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-
-
-
-.header-item {
-    color: var(--primary-subtitle-color);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.header-item.link:hover,
-.header-item.link:focus {
-    color: var(--accent-color);
-}
-
-.header-item-icon {
-    margin-right: 10px;
-    fill: currentColor;
-}
-
 .header-list .item:not(:last-child) {
     margin-right: 50px;
 }
 
-.navigation,
-.header-list,
 .contact {
     display: flex;
     align-items: center;
-
-}
-
-.contact {
     margin-left: auto;
 }
 
-.contacts-item:not(:last-child) {
+.contacts__item:not(:last-child) {
     margin-right: 50px;
+}
+
+.contacts__link {
+    display: flex;
+    align-items: center;
+    padding: 32px 0;
+    color: var(--primary-text-color);
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contacts__link:hover .contacts__icon,
+.contacts__link:focus .contacts__icon {
+    fill: var(--accent-color);
+}
+
+.header-list_link--current {
+    color: var(--accent-color);
+}
+
+.contacts__icon {
+    margin-right: 10px;
+    fill: currentColor;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
