--- a/css/main.css
+++ b/css/main.css
@@ -81,6 +81,11 @@ p {
   padding: 0;
 }
 
+.link {
+  text-decoration: none;
+  color: currentColor;
+}
+
 .container {
   width: 1200px;
   padding-left: 15px;
@@ -451,12 +456,12 @@ p {
 }
 
 .logo {
-  /*margin-right: 93px;*/
   font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
   text-decoration: none;
+  letter-spacing: 0.03em;
 }
 
 .logo span {
@@ -475,87 +480,76 @@ p {
   margin-left: 93px;
 }
 
-header::after {
-  content: '';
-  width: 100%;
-  position: absolute;
-  top: 0;
-  height: 1px;
-  background-color: #ececec;
+.header-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
-.site-link,
-.header-item {
+.navigation {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  font-weight: 500;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  padding: 32px 0;
-  text-decoration: none;
-  list-style: none;
 }
 
-.site-link {
+.link {
+  position: relative;
+  display: block;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--primary-subtitle-color);
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.link:hover, .link:focus {
+  color: var(--accent-color);
+}
+
+.header-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.header-list__link {
   position: relative;
 }
 
-.current::after {
+.header-list__item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.header-list__link {
+  position: relative;
+  display: block;
+  padding: 32px 0;
+}
+
+.header-list__link.header-list__link--current::after {
   content: '';
+  position: absolute;
   width: 100%;
   height: 4px;
-  position: absolute;
+  display: block;
   bottom: 0;
   left: 0;
   background-color: var(--accent-color);
   border-radius: 2px;
 }
 
-.site-link {
-  color: var(--primary-text-color);
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.site-link:hover,
-.site-link:focus,
-.current,
-.current-btn {
-  color: var(--accent-color);
-}
-
-.current,
-.current-btn {
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.header-item {
-  color: var(--primary-subtitle-color);
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.header-item.link:hover,
-.header-item.link:focus {
-  color: var(--accent-color);
-}
-
-.header-item-icon {
-  margin-right: 10px;
-  fill: currentColor;
-}
-
 .header-list .item:not(:last-child) {
   margin-right: 50px;
 }
 
-.navigation,
-.header-list,
 .contact {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -563,14 +557,40 @@ header::after {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-
-.contact {
   margin-left: auto;
 }
 
-.contacts-item:not(:last-child) {
+.contacts__item:not(:last-child) {
   margin-right: 50px;
+}
+
+.contacts__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 32px 0;
+  color: var(--primary-text-color);
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contacts__link:hover .contacts__icon,
+.contacts__link:focus .contacts__icon {
+  fill: var(--accent-color);
+}
+
+.header-list_link--current {
+  color: var(--accent-color);
+}
+
+.contacts__icon {
+  margin-right: 10px;
+  fill: currentColor;
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero {
@@ -603,7 +623,7 @@ header::after {
   color: var(--white-color);
 }
 
-.button.primary {
+.hero-button {
   display: inline-block;
   border-radius: 4px;
   margin-right: auto;
@@ -621,10 +641,11 @@ header::after {
   text-align: center;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.button.primary:focus,
-.button.primary:hover {
+.hero-button:focus, .hero-button:hover {
   background-color: var(--button-hover-color);
 }
 
@@ -633,21 +654,21 @@ header::after {
   padding-bottom: 94px;
 }
 
-.feature-list {
+.specifics-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.feature-list .feature-iteam:not(:last-child) {
+.specifics-list__iteam:not(:last-child) {
   margin-right: 30px;
 }
 
-.feature-list .feature-list {
+.specifics-list__iteam {
   width: 270px;
 }
 
-.feature-iteam-svg-background {
+.container-icon {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -659,11 +680,11 @@ header::after {
           justify-content: center;
 }
 
-.feature-iteam-icon {
+.specifics-list__icon {
   height: 120px;
 }
 
-.specifics .member-title {
+.specifics-list__title {
   margin-bottom: 10px;
   text-transform: uppercase;
   font-weight: 700;
@@ -671,7 +692,7 @@ header::after {
   line-height: 1.14;
 }
 
-.subtitle {
+.specifics-list__subtitle {
   margin-top: 0;
   margin-bottom: 0;
   font-size: 14px;
