--- a/scss/components/_logo.scss
+++ b/scss/components/_logo.scss
@@ -1,12 +1,11 @@
 .logo {
-    /*margin-right: 93px;*/
-    font-family: Raleway,
+        font-family: Raleway,
         sans-serif;
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
     text-decoration: none;
-
+    letter-spacing: 0.03em;
 
 }
 
