--- a/scss/layouts/_hero.scss
+++ b/scss/layouts/_hero.scss
@@ -21,6 +21,7 @@
     max-width: 696px;
     margin-left: auto;
     margin-right: auto;
+    
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
@@ -31,7 +32,7 @@
     color: var(--white-color);
 }
 
-.button.primary {
+.hero-button {
     display: inline-block;
     border-radius: 4px;
     margin-right: auto;
@@ -50,9 +51,11 @@
     text-align: center;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
+
+&:focus,
+    &:hover {
+        background-color: var(--button-hover-color);
+    }
 }
 
-.button.primary:focus,
-.button.primary:hover {
-    background-color: var(--button-hover-color);
-}
