--- a/scss/components/_subscription.scss
+++ b/scss/components/_subscription.scss
@@ -18,7 +18,7 @@
     margin-left: auto;
 }
 
-.footer-form-input {
+.footer-form__input {
     padding: 15px;
     width: 358px;
     margin-right: 12px;
@@ -34,14 +34,16 @@
     color: rgba(255, 255, 255, 0.6);
     transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
     cursor: pointer;
+
+    &:hover,
+        &:focus {
+            border-color: var(--accent-color);
+        }
 }
 
-.footer-form-input:hover,
-.footer-form-input:focus {
-    border-color: var(--accent-color);
-}
 
-.footer-form-button {
+
+.footer-form__button {
     display: flex;
     align-items: center;
     text-align: center;
@@ -63,13 +65,15 @@
     color: var(--white-color);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     cursor: pointer;
+
+    &:hover,
+        &:focus {
+            background-color: var(--button-hover-color);
+        }
 }
 
-.footer-form-button:hover,
-.footer-form-button:focus {
-    background-color: var(--button-hover-color);
-}
 
-.footer-form-icon {
+
+.footer-form__icon {
     fill: var(--white-color);
 }
