--- a/scss/layouts/_clients.scss
+++ b/scss/layouts/_clients.scss
@@ -1,4 +1,4 @@
-.section-title.clients {
+.section-title__clients {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.17;
@@ -11,33 +11,38 @@
     display: flex;
 }
 
-.our-clients-list-item-link {
+.our-clients-list__link {
     display: flex;
     justify-content: center;
     align-items: center;
+    
     width: 170px;
     height: 92px;
     border: 1px solid var(--passive-icon-color);
     border-radius: 4px;
     cursor: pointer;
+    
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+&:hover,
+    &:focus {
+        border-color: 1px solid var(--accent-color);
+    }
 }
 
-.our-clients-list-item:not(:last-child) {
+.our-clients-list__item:not(:last-child) {
     margin-right: 30px;
 }
 
-.our-clients-icon {
+.our-clients__icon {
     fill: var(--passive-icon-color);
+    
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.our-clients-list-item-link:hover,
-.our-clients-list-item-link:focus {
-    border-color: var(--accent-color);
-}
 
-.our-clients-list-item-link:hover .our-clients-icon,
-.our-clients-list-item-link:focus .our-clients-icon {
+
+.our-clients-list__link:hover .our-clients__icon,
+.our-clients-list__link:focus .our-clients__icon {
     fill: var(--accent-color);
 }
