--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -61,6 +61,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     background-color: var(--accent-color);
     border-radius: 2px;
+    margin-bottom: -1px;
 }
 
 .header-list .item:not(:last-child) {
