--- a/scss/layouts/_portfolio.scss
+++ b/scss/layouts/_portfolio.scss
@@ -1,10 +1,10 @@
-.filters {
+.work-list {
     display: flex;
     justify-content: center;
     margin-bottom: 50px;
 }
 
-.btn-main:not(:last-child) {
+.work-list__item:not(:last-child) {
     margin-right: 9px;
 }
 
@@ -14,7 +14,7 @@
 }
 
 /* <!-- Кнопки --> */
-.work-btn {
+.work-list__btn {
     display: inline-block;
     border-radius: 4px;
     padding: 6px 22px;
@@ -32,18 +32,15 @@
     background-color: var(--portfolio-btn-color);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-
-
-.work-btn:hover,
-.work-btn:focus {
-    color: var(--white-color);
-    background-color: var(--accent-color);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-        0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-
+&:hover,
+    &:focus {
+        color: var(--white-color);
+        background-color: var(--accent-color);
+        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+            0px 2px 2px rgba(0, 0, 0, 0.12);
+    }
+    }
 
 /* Работи */
 .gallery {
@@ -81,7 +78,7 @@
     padding-bottom: 20px;
     font-size: 16px;
     line-height: 1.8;
-    /* line-height: 30px; */
+    
     color: var(--primary-subtitle-color);
     letter-spacing: 0.03em;
 
