--- a/scss/layouts/_team.scss
+++ b/scss/layouts/_team.scss
@@ -1,14 +1,21 @@
-.member-list {
+.team {
+    padding-top: 94px;
+    padding-bottom: 94px;
+    background-color: var(--primary-team-color);
+   
+}
+
+.team-list {
     display: flex;
     text-align: center;
 
 }
 
-.member-list .member-item:not(:last-child) {
+.team-list .team-list__item:not(:last-child) {
     margin-right: 30px;
 }
 
-.member-item {
+.team-list__item {
 
     width: 270px;
 
@@ -24,16 +31,9 @@
     padding-bottom: 30px;
 }
 
-.team {
-    padding-top: 94px;
-    padding-bottom: 94px;
-    background-color: var(--primary-team-color);
-    /*font-size: 16px;
- line-height: 1.19;*/
 
-}
 
-.team .member-title {
+.team-name__title {
     margin-bottom: 10px;
     font-weight: 500;
     text-align: center;
@@ -42,7 +42,7 @@
 
 }
 
-.team .member-position {
+.team-name__position {
     margin-top: 0;
     margin-bottom: 0;
     font-size: 16px;
@@ -53,39 +53,42 @@
     color: var(--primary-subtitle-color);
 }
 
-.social-media-list {
+.social-list {
     display: flex;
     justify-content: center;
 }
 
-.social-media-item:not(:last-child) {
+.social-list__item:not(:last-child) {
     margin-right: 10px;
 }
 
 
-.media-icon {
+.social-list__link {
     display: flex;
-    width: 44px;
+    justify-content: center;
+        align-items: center;
+   
+        width: 44px;
     height: 44px;
     border-radius: 50%;
-    justify-content: center;
-    align-items: center;
+    
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+&:hover,
+    &:focus {
+        background-color: var(--accent-color);
+
+    }
 }
 
-.social-media-icon {
+.social-list__icon {
     fill: var(--passive-icon-color);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.media-icon:hover,
-.media-icon:focus {
-    background-color: var(--accent-color);
 
-}
 
-.media-icon:hover .social-media-icon,
-.media-icon:focus .social-media-icon {
+.social-list__link:hover .social-list__icon,
+.social-list__link:focus .social-list__icon {
     fill: var(--white-color);
 }
