--- a/css/main.css
+++ b/css/main.css
@@ -571,7 +571,7 @@ p {
       -ms-flex-align: center;
           align-items: center;
   padding: 32px 0;
-  color: var(--primary-text-color);
+  color: var(--primary-subtitle-color);
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
