--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -82,7 +82,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     display: flex;
     align-items: center;
     padding: 32px 0;
-    color: var(--primary-text-color);
+    color: var(--primary-subtitle-color);
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
